# hsNLP-

LP/: Helpers  LP.cabal
LP/LP/: DualDecomp.hs  Shared.hs
LP/LP/Format/: CPLEX.hs  Graph.hs
TAG/: TAG.cabal
TAG/NLP/Grammar/: Dependency.hs  DependencySent.hs  NonTerm.hs  Sentence.hs  Spine.hs  TAG.hs
chartparse/: ChartParse.cabal
chartparse/NLP/: ChartParse.hs  WordLattice.hs
chartparse/NLP/ChartParse/: EM.hs  Eisner.hs  Outside.hs
chartparse/NLP/ChartParse/Eisner/: Inside.hs  Outside.hs
chartparse/NLP/ChartParse/MacDonald/: Inside.hs
cky/NLP/: CNF.hs  Controller.hs
cky/NLP/CNF/: CKY.hs  Coordinate.hs  Graph.hs  LP.hs
dp/: DP.cabal
dp/Data/: DP.hs
dp/Data/DP/: SolverAPI.hs  SolverInternal.hs
dp/Data/DP/Solvers/: Beam.hs  BottomUpLazy.hs  BottomUpStrict.hs  Recursive.hs  TopDown.hs
fsm/: fsm.cabal
fsm/NLP/: FSM.hs
fsm/NLP/FSM/: Draw.hs  Simple.hs
helpers/: Arbitrary.hs  Common.hs  MkEnum.hs  Parse.hs  Test.hs
language/: English.hs  language.cabal
language/NLP/: Language.hs
language/NLP/Language/: Common.hs  English.hs  German.hs  Word.hs  WordLattice.hs
language/NLP/Language/English/: NonTerm.hs  POS.hs
language/NLP/Language/German/: NonTerm.hs  POS.hs
mapped/: pureatom.cabal
mapped/NLP/: Atom.hs
mapped/NLP/Example/: Double.hs  POS.hs  Reader.hs
probdist/: estimators.cabal  probdist.cabal
probdist/NLP/Probability/: Chain.hs  ConditionalDistribution.hs  Distribution.hs  EM.hs  Observation.hs  SmoothTrie.hs  Trie.hs
probdist/tests/: Tests.hs
semiring/: semiring.cabal
semiring/Data/: Semiring.hs
semiring/Data/Semiring/: Boolean.hs  Counting.hs  Derivation.hs  Helpers.hs  LogProb.hs  Prob.hs  Viterbi.hs  ViterbiNBest.hs  ViterbiNBestDerivation.hs
semiring/NLP/: Semiring.hs
semiring/NLP/Semiring/: Counting.hs  Derivation.hs  LogProb.hs  Prob.hs  Viterbi.hs  ViterbiNBestDerivation.hs
simplelanguage/NLP/Language/: SimpleLanguage.hs
training/: Adjunction.hs  ArbitraryHelpers.hs  BestDepend.hs  Common.hs  Counts.hs  CountsDep.hs  DataHelpers.hs  Debug.hs  DependTest.hs  Dependency.hs  DependencyStructure.hs  Distance.hs  EnumHelpers.hs  ExtraParams.hs  Memoize.hs  NonTerm.hs  POS.hs  PreProcess.hs  Prior.hs  Probs.hs  Punctuation.hs  Sentence.hs  TAG.hs  TAGparse.hs  TagTest.hs  TreeBank.hs  Word.hs  model.cabal
training/NLP/: ParseMonad.hs
training/NLP/Model/: Adjunction.hs  Chain.hs  ChainPrior.hs  CreateableSemi.hs  Decoding.-fforce-recomp  Decoding.hs  Derivation.hs  Distance.hs  NewAdjunction.hs  ParseState.hs  ParseTree.hs  Prior.hs  TAGWrap.hs  TAGparse.hs
training/NLP/Model/Dependency/: Decoding.hs  Derivation.hs  Format.hs  Model.hs  Parse.hs  Semi.hs  Wrap.hs
training/NLP/Model/TAG/: Adjunction.hs  ChainPrior.hs  Counts.hs  Decoding.hs  DependencyPrior.hs  Derivation.hs  Format.hs  Parse.hs  Prior.hs  Semi.hs  TAGWrap.hs  TAGparse.hs  Wrap.hs
training/NLP/TreeBank/: Dependency.hs  Display.hs  Label.hs  POS.hs  Parse.hs  Pi.hs  TAG.hs  TreeBank.hs
training/scripts/: Analysis.hs  Canonicalize.hs  CollectCounts.hs  CollectDepCounts.hs  CombineCounts.hs  CommonMap.hs  CountSpines.hs  DebugSent.hs  DecodeDep.hs  DecodeProf.hs  DecodeProf2.hs  GetGold.hs  GetNT.hs  GetPOS.hs  GetResults.hs  GetWords.hs  GraphFScore.hs  Inside.hs  MakePruningSet.hs  NumberParses.py  PrettyParse.hs  PrintCounts.hs  ProbSpines.hs  Quote.hs  RunEM.py  RunMany.py  RunManyCounts.py  Score.py  SetupData.hs  SetupMapping.hs  SetupStripped.hs  ShowCounts.hs  ShowCountsDebug.hs  ShowTest.hs  SkewDecode.hs  SplitFile.hs  ToDependency.hs  ToSpinePOS.hs  ToWords.hs  Unknownify.hs  (+2 more)
translation/NLP/SMT/Format/: PhraseTable.hs
