name:                LP
version:             0.1
synopsis:            
description:         
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush@mit.edu>
build-Type:          Simple
cabal-version:       >= 1.2


library
    exposed-modules:     LP.Format.CPLEX
                         LP.Format.Graph
    other-modules: Helpers.Common
                         
    build-Depends:   base       >= 3   && < 4,                     
                 containers >= 0.1 && < 0.3,
                 array,
                 semiring,
                 estimators,
                 binary,  
                    fsm,
                    chartparse,
                     pretty,
                     prettyclass,
                     safe,
                     derive,
                     QuickCheck > 2.0,
                     HUnit,
                     parsec > 3.0,
                     DebugTraceHelpers,
                     process,
                     MonadRandom,
                     TAG,
                     multilanguage,
                     monoids,
                     bimap
                                

