name:                TAG
version:             0.1
synopsis:            
description:         
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush at mit dot edu>
build-Type:          Simple
cabal-version:       >= 1.2

library
    exposed-modules: NLP.Grammar.TAG
                     NLP.Grammar.Spine
                     NLP.Grammar.Dependency
                     
    other-modules:   Helpers.Common
                     Helpers.MkEnum

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     derive,
                     binary,
                     bytestring,
                     bytestring-trie,
                     safe,
                     QuickCheck > 2.0,
                     prettyclass,
                     pretty,
                     bimap,
                     array,

                     deepseq