name:                chartparse
version:             0.3.1
synopsis:            A framework for building chart parsers 
description:         This provides a simple framework for building probabilistic 
                     chart parsers.
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush@mit.edu>
build-Type:          Simple
cabal-version:       >= 1.2


flag testing
    description: Testing mode, only build minimal components
    default: False

library
    ghc-options: -O2                     
    exposed-modules:     NLP.ChartParse
                         NLP.ChartParse.Eisner.Inside
                         NLP.ChartParse.Eisner.Outside
                         NLP.ChartParse.CKY.Inside
                         NLP.ChartParse.CKY.Outside
                         NLP.WordLattice
    other-modules:      Helpers.Common

    if flag(testing)
        buildable: False

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     array,
                     semiring >= 0.3,
                     fsm,
                     pretty,
                     prettyclass,
                     text,
                     safe,
                     deepseq

executable hstestsemi
    main-is:            Tests.hs
    other-modules:      NLP.ChartParse

    
    hs-source-dirs: . tests/

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     array,                
                     QuickCheck >= 2,
                     HUnit,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     derive,  
                     binary

                     
    if !flag(testing)
        buildable: False
                  