name:                DP
version:             0.1
synopsis:            Framework for pragmatic dynamic programming  
description:         This module provides a simple declarative framework for dynamic programming in the optimization sense. 
                     Users specify a dynamic programming problem as a simple haskell function that looks very similar to 
                     mathematical recursion used in texts. The specification is then translated into a form that can be 
                     solved efficiently by a modular solver. Includes solvers using memoization, 
                     strict and lazy ordered tables, and recursion with a range of data structures for the underlying table. 
                     This method also separates processing steps like pruning and debugging from the recursion itself. 
                     Preliminary tools for beam search and tracing are included. 
                      
category:            Natural Language Processing
author:              Sasha Rush
maintainer:          <srush at mit dot edu>
build-Type:          Simple
cabal-version:       >= 1.2

library
    exposed-modules:     Data.DP,
                         Data.DP.Solver,   
                         Data.DP.Solvers,   
                         Data.DP.Solver.LazyOrdered,   
                         Data.DP.Solver.Memo, 
                         Data.DP.Solver.Strict,   
                         Data.DP.Solver.Naive,
                         Data.DP.Examples,
                         Data.DP.Examples.Fibonacci

    other-modules : 
                         Data.DP.Internals
                            
    ghc-options: -O2                        

    build-Depends:   base,
                     containers,
                     safe,
                     QuickCheck > 2.0,
                     array,
                     list-tries,
                     semiring >= 0.2,
                     mtl > 1.1

