name:                fsm
version:             0.1
synopsis:            Finite State Machines
description:         Finite State Machines
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush at mit dot edu>
build-Type:          Simple
cabal-version:       >= 1.2
homepage:            http://github.com/srush/FSM/tree/master

flag testing
    description: Testing mode, only build minimal components
    default: False

library
    exposed-modules:     NLP.FSM
                         NLP.FSM.Simple
    other-modules:  
    if flag(testing)
        buildable: False

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     fgl,
                     semiring

executable hsfsm
    main-is:            Tests.hs
    hs-source-dirs: . tests/

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     semiring,
                     QuickCheck >= 2,
                     HUnit,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2
                    
                     
    if !flag(testing)
        buildable: False
                  
