name:                pureatom
version:             0.1
synopsis:            
description:         
category:            Natural Language Processing
author:              Sasha Rush
maintainer:          <srush at mit dot edu>
build-Type:          Simple
cabal-version:       >= 1.2

library
    exposed-modules: NLP.Atom
                     
    other-modules:   
                     

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     binary,
                     safe,
                     bimap,
                     array,
                     text,
                     mtl,
                     deepseq
