name:                probdist
version:             0.1
synopsis:            Tools for dealing with probability distributions
description:         This provides some tools for using probability distributions 
                     particularly for conditioning and smoothing
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush@mit.edu>
build-Type:          Simple
cabal-version:       >= 1.2

flag testing
    description: Testing mode, only build minimal components
    default: False

library
    exposed-modules:     NLP.Probability.Distribution
                         NLP.Probability.Observation     
                         NLP.Probability.ConditionalDistribution     
                         NLP.Probability.TrieWrap     

    if flag(testing)
        buildable: False

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     binary,
                     safe >= 0.2,
                     list-tries,
                     logfloat,          
                     pretty,
                     prettyclass 

executable hstestprobdist
    main-is:         Tests.hs
    hs-source-dirs: . tests/

    build-Depends:   base       >= 3   && < 4,
                     containers >= 0.1 && < 0.3,
                     monoids    >= 0.2.0.2 && < 0.3,
                     QuickCheck >= 2,
                     pretty,
                     prettyclass,
                     safe,
                     HUnit,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2
                    
    if !flag(testing)
        buildable: False
                  
