name:                model
version:             0.1.1
synopsis:            
description:         
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush@mit.edu>
build-Type:          Simple
cabal-version:       >= 1.2


library
    exposed-modules:     NLP.Model.TAGparse,
                         NLP.Model.Distance,
                         NLP.TreeBank.TreeBank,
                         NLP.TreeBank.TAG
                         NLP.Model.Adjunction
                         NLP.Model.ChainPrior
                         NLP.Model.CreateableSemi
                         NLP.Model.Derivation
                         NLP.Model.TAGWrap
                         NLP.Model.Decoding
                         NLP.TreeBank.Dependency
                         NLP.ParseMonad                         
    other-modules: 
                   Helpers.Common
                   Helpers.MkEnum
                   Helpers.Arbitrary
                   Helpers.Parse
    ghc-options: -O2                     
    build-Depends:   base       >= 3   && < 4,                     
                 containers >= 0.1 && < 0.3,
                 array,
                 semiring,
                 estimators >= 0.1.2,
                 binary,
                 text,
                    fsm,
                    chartparse >= 0.3,
                     pretty,
                     prettyclass,
                     safe,
                     derive,
                     QuickCheck > 2.0,
                     HUnit,
                     parsec > 3.0,
                     DebugTraceHelpers,
                     process,
                     MonadRandom,
                     TAG,
                     simplelanguage,
                     monoids,
                     bimap,
                     mtl,
                     list-tries,
                     deepseq,
                     pureatom                            

