name:                model
version:             0.1.4
synopsis:            
description:         
category:            Natural Language Processing
license:             BSD3
license-file:        LICENSE
author:              Sasha Rush
maintainer:          <srush@mit.edu>
build-Type:          Simple
cabal-version:       >= 1.2


library
    exposed-modules:     
                         NLP.Model.Distance,
                         NLP.TreeBank.TreeBank,
                         NLP.Model.TAG.Adjunction
                         NLP.Model.TAG.Wrap
                         NLP.Model.TAG.Prior
                         NLP.Model.TAG.Parse,
                         NLP.Model.TAG.Semi,
                         NLP.Model.TAG.Format,
                         NLP.Model.TAG.Decoding,
                         NLP.Model.TAG.Derivation,
                         NLP.Model.TAG.DependencyPrior,
                         NLP.Model.TAG.Counts,

                         NLP.Model.Dependency.Model
                         NLP.Model.Dependency.Wrap
                         NLP.Model.Dependency.Parse,
                         NLP.Model.Dependency.Semi,
                         NLP.Model.Dependency.Format,
                         NLP.Model.Dependency.Decoding,
                         NLP.Model.Dependency.Derivation,

                         NLP.Model.CreateableSemi
                         NLP.Model.ParseState
                         NLP.Model.ParseTree

                         NLP.TreeBank.Dependency,
                         NLP.TreeBank.Label,
                         NLP.ParseMonad                         
    other-modules: 
                   Helpers.Common
                   Helpers.MkEnum
                   Helpers.Arbitrary
                   Helpers.Parse
                   Helpers.Test
    ghc-options: -O2                     
    build-Depends:   base       >= 3   && < 4,                     
                 containers >= 0.1 && < 0.3,
                 array,
                 semiring >= 0.3,
                 estimators >= 0.1.2,
                 binary,
                 text,
                    fsm,
                    chartparse >= 0.3,
                     test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2,

                     pretty,
                     prettyclass,
                     safe,
                     derive,
                     QuickCheck > 2.0,
                     HUnit,
                     parsec > 3.0,
                     DebugTraceHelpers,
                     process,
                     MonadRandom,
                     TAG > 0.1,
                     simplelanguage,
                     monoids,
                     bimap,
                     mtl,
                     list-tries,
                     deepseq,
                     pureatom                            

